Fixed v-nav button alignment

--- a/main.css
+++ b/main.css
@@ -292,7 +292,7 @@ a.disabled {
   font-size: 0.8rem;
   text-transform: uppercase;
   width: 100%;
-  padding: 0.7rem 1rem 0.7rem 1rem;
+  padding: 0.7rem 1rem 0.7rem 1.2rem;
   text-decoration: none;
   /* #424242 */
   color: #323232;
@@ -303,10 +303,10 @@ a.disabled {
   border-radius: 40px;
   font-weight: 700;
   display: grid;
-  grid-template-columns: auto min-content;
+  grid-template-columns: auto 20px;
   justify-items: center;
   box-sizing: border-box;
-  gap: 15px;
+  gap: 20px;
 }
 
 .vertical-nav-button i {
